gitops/infra/cilium/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default-gateway
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTPS
      port: 443
      name: argocd-https
      hostname: argocd.172.18.0.0.sslip.io
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-sslip-io-tls
    - protocol: HTTPS
      port: 443
      name: hello-world-https
      hostname: hello-world.172.18.0.0.sslip.io
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: hello-world-sslip-io-tls
